test/type/fail/non_existent_field.j
class A{
  Void main() {
    return this.a;
  }
}
